--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "michaelbmuller/50001-ready-guidance-2018",
   "type": "library",
   "description": "50001:208 Ready Guidance",
-  "keywords": ["50001 Ready", "ISO 50001", "ISO 50001:2018","DOE","USDOE"],
+  "keywords": ["50001 Ready", "ISO 50001", "ISO 50001 2018","DOE","USDOE"],
   "license": "MPL-2.0",
   "authors": [
     {
